Process_Management/force-app/main/default/objects/Time_Report__c.object
<CustomObject>
    <fields>
        <fullName>Client_Industry__c</fullName>
        <formula>TEXT(Job__r.Stream__r.Client__r.Industry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Job__r.Stream__r.Client__r.Name</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Exceeded__c</fullName>
        <formula>Date__c &gt;  Job__r.Due_Date_In_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCurrentUsers__c</fullName>
        <formula>Reporter__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Reporter_Date_Id__c</fullName>
        <formula>Job__c + Reporter__c + TEXT(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Reporter Date Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Time Reports</relationshipLabel>
        <relationshipName>Time_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Exceeded__c</fullName>
        <formula>If( Date__c - Job__r.Due_Date_In_Date__c &gt; 0, Date__c - Job__r.Due_Date_In_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Exceeded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReporterIsCurrentUser__c</fullName>
        <formula>Reporter__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReporterIsCurrentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spendings__c</fullName>
        <formula>Time_Reported__c * Reporter__r.Earnings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spendings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Reported__c</fullName>
        <label>Time Reported (h)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>Time_Reported__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Reports</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Job__c</columns>
        <columns>Time_Reported__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ReporterIsCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Time Reports</label>
    </listViews>
    <listViews>
        <fullName>Time_Reports_View</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Job__c</columns>
        <columns>Time_Reported__c</columns>
        <filterScope>Mine</filterScope>
        <label>Time Reports View</label>
    </listViews>
    <nameField>
        <displayFormat>TR# {00000}</displayFormat>
        <label>Time Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_log_below_zero</fullName>
        <active>true</active>
        <errorConditionFormula>Time_Reported__c &lt; 0</errorConditionFormula>
        <errorMessage>You can not report time below zero!</errorMessage>
    </validationRules>
</CustomObject>